--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "gulp": "^3.8.8",
     "hasbin": "^1.2.3",
     "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-browsersync-official": "^1.0.0",
+    "staumobil-bootstrap": "^1.0.0",
     "yargs": "^4.6.0"
   }
 }
